--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 (mytí, střih, zaholení kontur břitvou, vytrhnutí chloupků
                 depilačním voskem (uši, nos), vysušení, styling)-->
               </td>
-              <td>250-350 Kč</td>
+              <td>250 - 350 Kč</td>
             </tr>
             <tr>
               <td>
@@ -140,7 +140,7 @@
               <td>450 Kč</td>
             </tr>
           </table>
-          <a href="#">ZAVOLEJTE NÁM</a>
+          <a href="tel:+420123456789">ZAVOLEJTE NÁM</a>
         </section>
       </main>
       <footer class="footer" id="kontakt">
@@ -190,11 +190,13 @@
           </div>
           <div class="oteviraci-doba">
             <h2 class="nadpis-mensi">Otevírací doba</h2>
-            <p>Po: 9:00-18:00</p>
-            <p>Út: 9:00-18:00</p>
-            <p>St: 9:00-18:00</p>
-            <p>Čt: 9:00-18:00</p>
-            <p>Pá: 9:00-18:00</p>
+            <div class="oteviraci-doba-hodiny">
+              <p>Po: 9:00-18:00</p>
+              <p>Út: 9:00-18:00</p>
+              <p>St: 9:00-18:00</p>
+              <p>Čt: 9:00-18:00</p>
+              <p>Pá: 9:00-18:00</p>
+            </div>
           </div>
         </div>
         <div class="footer-prava-cast">
