--- a/index.html
+++ b/index.html
@@ -115,9 +115,11 @@
               <td>600 Kč</td>
             </tr>
           </table>
-          <a href="https://k-k.reservio.com/" target="_blank">
-            REZERVOVAT TERMÍN
-          </a>
+          <div class="button-align">
+            <a href="https://k-k.reservio.com/" target="_blank">
+              REZERVOVAT TERMÍN
+            </a>
+          </div>
           <!--DÁMSKÉ KADEŘNICTVÍ-->
           <h2 class="nadpis-damske-kadernictvi" id="damske-kadernictvi">
             DÁMSKÉ KADEŘNICTVÍ
@@ -140,7 +142,9 @@
               <td>450 Kč</td>
             </tr>
           </table>
-          <a href="tel:+420123456789">ZAVOLEJTE NÁM</a>
+          <div class="button-align">
+            <a href="tel:+420123456789">ZAVOLEJTE NÁM</a>
+          </div>
         </section>
       </main>
       <footer class="footer" id="kontakt">
