--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
             <div class="popis-text-prava-strana">
               <img
-                src="https://placehold.co/400x400"
+                src="https://placehold.co/750x400"
                 alt="pansky-strih"
                 class="popisek-img"
               />
@@ -150,56 +150,73 @@
       <footer class="footer" id="kontakt">
         <div class="footer-leva-cast">
           <h2 class="nadpis-kontakt">Máte nějaké dotazy? Ozvěte se nám.</h2>
-          <h2 class="nadpis-mensi">BARBER</h2>
-          <div class="kontakt-icons-flex">
-            <a href="#">
-              <div class="icons-flexbox">
-                <img
-                  src="icons/instagram.png"
-                  alt="logo-ig"
-                  class="icon"
-                />@kamil-vala
+          <div class="obsah-kontakt">
+            <div class="kontakt-barber">
+              <div class="nadpis-icon-flex">
+                <h2 class="nadpis-mensi">BARBER</h2>
+                <img src="icons/barber-sign.png" alt="" width="50px" />
               </div>
-            </a>
-            <a href="tel:+123456890">
-              <div class="icons-flexbox">
-                <img
-                  src="icons/mobile.png"
-                  alt="icon-telefon"
-                  class="icon"
-                />123 456 789
+              <div class="kontakt-icons-flex">
+                <a href="#" target="_blank">
+                  <div class="icons-flexbox">
+                    <img
+                      src="icons/instagram.png"
+                      alt="logo-ig"
+                      class="icon"
+                    />@kamil-vala
+                  </div>
+                </a>
+                <a href="tel:+123456890">
+                  <div class="icons-flexbox">
+                    <img
+                      src="icons/mobile.png"
+                      alt="icon-telefon"
+                      class="icon"
+                    />+420 123 456 789
+                  </div>
+                </a>
               </div>
-            </a>
-          </div>
-          <h2 class="nadpis-mensi">DÁMSKÉ KADEŘNICTVÍ</h2>
-          <div class="kontakt-icons-flex">
-            <a href="#">
-              <div class="icons-flexbox">
-                <img
-                  src="icons/instagram.png"
-                  alt="logo-ig"
-                  class="icon"
-                />@kaja-valova
-              </div></a
-            >
-            <a href="tel:+123456890">
-              <div class="icons-flexbox">
-                <img
-                  src="icons/mobile.png"
-                  alt="icon-telefon"
-                  class="icon"
-                />123 456 789
+            </div>
+            <div class="kontakt-damske-kadernictvi">
+              <div class="nadpis-icon-flex">
+                <h2 class="nadpis-mensi">DÁMSKÉ KADEŘNICTVÍ</h2>
+                <img src="icons/hairdresser.png" alt="" width="50px" />
               </div>
-            </a>
-          </div>
-          <div class="oteviraci-doba">
-            <h2 class="nadpis-mensi">Otevírací doba</h2>
-            <div class="oteviraci-doba-hodiny">
-              <p>Po: 9:00-18:00</p>
-              <p>Út: 9:00-18:00</p>
-              <p>St: 9:00-18:00</p>
-              <p>Čt: 9:00-18:00</p>
-              <p>Pá: 9:00-18:00</p>
+              <div class="kontakt-icons-flex">
+                <a href="#" target="_blank">
+                  <div class="icons-flexbox">
+                    <img
+                      src="icons/instagram.png"
+                      alt="logo-ig"
+                      class="icon"
+                    />@kaja-valova
+                  </div></a
+                >
+                <a href="tel:+123456890">
+                  <div class="icons-flexbox">
+                    <img
+                      src="icons/mobile.png"
+                      alt="icon-telefon"
+                      class="icon"
+                    />+420 123 456 789
+                  </div>
+                </a>
+              </div>
+            </div>
+            <div class="kontakt-oteviraci-hodiny">
+              <div class="oteviraci-doba">
+                <div class="nadpis-icon-flex">
+                  <h2 class="nadpis-mensi">OTEVÍRACÍ DOBA</h2>
+                  <img src="icons/clock.png" alt="" width="40px" />
+                </div>
+                <div class="oteviraci-doba-hodiny">
+                  <p><span class="bold">Po</span>: 9:00 - 18:00</p>
+                  <p><span class="bold">Út</span>: 9:00 - 18:00</p>
+                  <p><span class="bold">St</span>: 9:00 - 18:00</p>
+                  <p><span class="bold">Čt</span>: 9:00 - 18:00</p>
+                  <p><span class="bold">Pá</span>: 9:00 - 18:00</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
