--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
               <td>800 - 1400 Kč</td>
             </tr>
             <tr>
-              <td>BARVENÍ VLASŮ</td>
+              <td>MELÍR</td>
               <td>1000 - 1600 Kč</td>
             </tr>
             <tr>
