--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
     <script src="main.js" defer></script>
@@ -170,7 +170,7 @@
               <td>600 Kč</td>
             </tr>
             <tr>
-              <td>STŘÍHÁNÍ KRÁTKÝCH VLASŮ NA KRÁTKÉ</td>
+              <td>STŘÍHÁNÍ DLOUHÝCH VLASŮ NA KRÁTKÉ</td>
               <td>500 Kč</td>
             </tr>
           </table>
@@ -333,6 +333,7 @@
             referrerpolicy="no-referrer-when-downgrade"
             class="mapa"
           ></iframe>
+          <p class="bold">Hranická 24/14, 742 35 Odry</p>
         </div>
       </footer>
     </div>
